--- a/object/object.css
+++ b/object/object.css
@@ -1,17 +1,37 @@
 #player{
     width: 50px;
     height: 50px;
-    background-color: black;
+    scale: 1.2;
     position: absolute;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    border-radius: 4px;
+    filter: blur(2);
+    background-image: url('https://i.pinimg.com/originals/b0/da/cd/b0dacd0bb277315b8582d2d0e07d62a8.gif');
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 #point{
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    background-color: red;
+
     position: absolute;
     transform: translate(-50%, -50%);
+    background-image: url('https://i.pinimg.com/originals/e4/96/0c/e4960c1d084132279f17ca869846c00c.gif');
+    background-position: center;
+    background-size: cover;
+}
+#pointBad{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-image: url('https://i.gifer.com/origin/24/2432cf5ff737ad7d1794a29d042eb02e_w200.gif');
+    background-position: center;
+    background-size: 120%;
 }
