--- a/index.css
+++ b/index.css
@@ -1,16 +1,34 @@
 #root{
     width: 640px;
     height: 480px;
-    border: 2px solid gray;
+    box-shadow: 5px 5px 10px black;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 8px;
     overflow: hidden;
+    border:2px solid rgb(0, 0, 0);
+    background-color: white;
+}
+#bk{
+    width: 640px;
+    height: 480px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url('https://cdn.wallpapersafari.com/35/73/LUhwmg.gif');
+    background-color: white;
+    opacity: 0.9;
 }
 #cont{
     position: absolute;
     right: 5px;
     top: -20px;
+    z-index: 2;
+}
+body{
+    color: white;
+    background-color: rgb(18, 18, 18);
 }
